# callguard-ai-android

./: .gitignore  README.md  benchmark_test.sh  build.gradle  example_api_communication.json  gradle.properties  performance_analysis.sh  run_benchmark.sh  settings.gradle  trace.html
app/: .editorconfig  Loding_lottie.json  build.gradle  google-services.json
app/config/detekt/: detekt.yml
app/libs/: tokenizer-native-release.aar
app/src/androidTest/java/com/museblossom/callguardai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/museblossom/callguardai/: AppClass.kt  BootReceiver.kt  CallGuardApplication.kt  MainActivity.kt
app/src/main/java/com/museblossom/callguardai/Model/: Result.kt
app/src/main/java/com/museblossom/callguardai/di/: AppModule.kt  DatabaseModule.kt
app/src/main/java/com/museblossom/callguardai/domain/model/: AnalysisResult.kt  AuthenticationException.kt
app/src/main/java/com/museblossom/callguardai/domain/repository/: AudioAnalysisRepositoryInterface.kt  CallGuardRepositoryInterface.kt
app/src/main/java/com/museblossom/callguardai/domain/usecase/: AnalyzeAudioUseCase.kt  CallGuardUseCase.kt
app/src/main/java/com/museblossom/callguardai/media/: RiffWaveHelper.kt
app/src/main/java/com/museblossom/callguardai/presentation/viewmodel/: CallRecordingViewModel.kt  MainViewModel.kt  SplashViewModel.kt
app/src/main/java/com/museblossom/callguardai/recorder/: Recorder.kt
app/src/main/java/com/museblossom/callguardai/repository/: AudioAnalysisRepository.kt  DownloadRepository.kt
app/src/main/java/com/museblossom/callguardai/service/: MyFirebaseMessagingService.kt
app/src/main/java/com/museblossom/callguardai/ui/activity/: AccessibilityPermissionActivity.kt  AlarmOffActivity.kt  EtcPermissonActivity.kt  LoginActivity.kt  (+5 more)
app/src/main/res/anim/: dialog_slide_up_fade_in.xml
app/src/main/res/color/: stroke_normal.xml
app/src/main/res/drawable/: app_logo.xml  app_warning_logo.xml  baseline_close_24.xml  baseline_person_pin_24.xml  border_background.xml  button_background.xml  call_widget_background.xml  call_widget_caution_background.xml  call_widget_success_background.xml  call_widget_warning_background.xml  callguardai_logo.xml  circle_shape.xml  custom_anim_list.xml  deep_voice_text.xml  dialog_round.xml  gpp_bad_24dp_92d050_fill0_wght400_grad0_opsz24.xml  outline_cancel_24.xml  policy_24dp_7fe0ff_fill0_wght400_grad0_opsz24.xml  policy_alert_24dp_c00000_fill0_wght400_grad0_opsz24.xml  policy_alert_24dp_ff7655_fill0_wght400_grad0_opsz24.xml  warning_gradation1.xml  warning_gradation2.xml
app/src/main/res/layout/: activity_accessibility_permission.xml  activity_alarm_off.xml  activity_benchmark.xml  activity_etc_permisson.xml  activity_login.xml  activity_main.xml  activity_permission_deined.xml  activity_splash.xml  call_floating.xml  call_warning_floating.xml  notification_collapsed.xml  notification_expanded.xml  permission_dialog.xml  permission_etc_dialog.xml  permission_overlay_dialog.xml  toast_sample.xml  widget_call.xml
app/src/main/res/values/: colors.xml  notification_channels.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/museblossom/callguardai/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
key/: BuildKey
lib/: build.gradle
lib/src/main/java/com/whispercpp/: WhisperLib.kt
lib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
lib/src/main/jni/whisper/: CMakeLists.txt  jni.c
(+42 files in other folders)
